# PolySwyft

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE  README.md  cliff.toml  main.ipynb  main_CMB.py  main_CMB_polychord.py  main_CMB_swyft.py  main_GMM.py  main_GMM_multimodal.py  main_GMM_polychord.py  main_GMM_swyft.py  main_MVG.py  main_MVG_polychord.py  main_MVG_swyft.py  pyproject.toml  requirements.txt
.claude/commands/: create_pr.md
.github/: markdown-link-check-config.json
.github/workflows/: ci.yml  claude-review.yml  docs.yml  lint.yml  publish.yml  security.yml  version-bump.yml
PolySwyft/: PolySwyft.py  PolySwyft_Dataloader.py  PolySwyft_Network.py  PolySwyft_Network_CMB.py  PolySwyft_Post_Analysis.py  PolySwyft_Settings.py  PolySwyft_Simulator_CMB.py  PolySwyft_Simulator_MixGaussMultiPost.py  PolySwyft_Simulator_MultiGauss.py  Swyft_Simulator_CMB.py  Swyft_Simulator_MultiGauss.py  utils.py
docs/: algorithm.rst  api.rst  conf.py  index.rst  quickstart.rst
examples/: plotting.py
examples/cmb/: network.py  run_polychord.py  run_polyswyft.py  run_swyft.py  simulator.py  swyft_simulator.py
examples/gmm/: network.py  run_polychord.py  run_polyswyft.py  run_swyft.py  simulator.py
examples/mvg/: network.py  run_polychord.py  run_polyswyft.py  run_swyft.py  simulator.py  swyft_simulator.py
polyswyft/: __init__.py  core.py  dataloader.py  network.py  settings.py  utils.py
tests/: conftest.py  test_dataloader.py  test_mpi_integration.py  test_mpi_unit.py  test_network.py  test_settings.py  test_shape_compatibility.py  test_simulator_gmm.py  test_simulator_mvg.py  test_utils.py
