[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "polyswyft"
version = "0.4.2"
description = "Sequential simulation-based nested sampling combining PolyChord and swyft"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    { name = "Kilian Scheutwinkel", email = "khs40@cantab.ac.uk" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11,<1.14",
    "torch>=2.0,<2.3; platform_system == 'Darwin' and platform_machine == 'x86_64'",
    "torch>=2.0; platform_system != 'Darwin' or platform_machine != 'x86_64'",
    "pytorch-lightning>=1.9,<2",
    "anesthetic>=2.0",
    "swyft==0.4.4",
]

[project.optional-dependencies]
mpi = ["mpi4py>=3.0"]
wandb = ["wandb"]
examples = ["lsbi>=0.9"]
cmb = ["cosmopower"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.4"]
notebook = ["jupyter", "notebook"]
all = [
    "mpi4py>=3.0",
    "wandb",
    "lsbi>=0.9",
    "cosmopower",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "jupyter",
    "notebook",
]

[project.urls]
Homepage = "https://github.com/kilian1103/PolySwyft"
Documentation = "https://arxiv.org/abs/2512.08316"

[tool.setuptools.packages.find]
include = ["polyswyft*"]

[tool.uv]
# Allow pre-release / dev versions of swyft (e.g. installed from git)
prerelease = "if-necessary-or-explicit"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring MPI or PolyChord chain files",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["polyswyft"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
show_missing = true
fail_under = 40

[tool.ruff]
target-version = "py39"
line-length = 120
exclude = ["examples/", "*.ipynb"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["polyswyft"]
